@@ -35,8 +35,6 @@ RequestExecutionLevel admin
 !insertmacro GetRoot
 
 !addplugindir plugins
-!addplugindir plugins/cpuid
-!addplugindir plugins/systeminfo
 !include getwindowsversion.nsh
 
 ;--------------------------------
@@ -149,7 +147,7 @@ readme_file_not_found:
 !endif
 
 ; ********************************************** Initialise $arch
-  test64::get_arch
+  win32-loader::get_arch
   StrCpy $arch $0
 !ifndef NETWORK_BASE_URL
   ReadINIStr $0 $d\win32-loader.ini "installer" "arch"
@@ -198,7 +196,7 @@ windows_version_ok:
 
   ${If} $windows_boot_method == ntldr
   ${OrIf} $windows_boot_method == bootmgr
-    systeminfo::find_system_partition
+    win32-loader::find_system_partition
     Pop $c
     ${If} $c == failed
       ${GetRoot} $WINDIR $c
@@ -463,7 +461,7 @@ d-i debian-installer/locale string $0"
   ${Endif}
 
 ; ********************************************** preseed domain
-  systeminfo::domain
+  win32-loader::domain
   Pop $2
   Pop $0
   ${If} $2 != 0
@@ -489,7 +487,7 @@ d-i time/zone seen false"
   ${Endif}
 
 ; ********************************************** preseed keymap
-  systeminfo::keyboard_layout
+  win32-loader::keyboard_layout
   Pop $0
   ; lower word is the locale identifier (higher word is a handler to the actual layout)
   IntOp $0 $0 & 0x0000FFFF
@@ -516,7 +514,7 @@ d-i console-keymaps-at/keymap seen false"
   ${Endif}
 
 ; ********************************************** preseed hostname
-  systeminfo::hostname
+  win32-loader::hostname
   Pop $2
   Pop $0
   ${If} $2 != 0
@@ -534,7 +532,7 @@ d-i netcfg/get_hostname seen false"
   ${Endif}
 
 ; ********************************************** preseed user-fullname
-  systeminfo::username
+  win32-loader::username
   Pop $0
   ${If} $0 != ""
     StrCpy $preseed_cfg "\
@@ -783,7 +781,7 @@ gzip.exe -1 < newc_chunk >> initrd.gz$\r$\n\
         Quit
       ${Endif}
       ; "The entry {id} was successfully created" is in top of stack now
-      string::bcdedit_extract_id
+      win32-loader::bcdedit_extract_id
       Pop $0
       ${If} $0 == "error"
         MessageBox MB_OK|MB_ICONSTOP "$(error_bcdedit_extract_id)"
